Mysql Database, Tables Created using Entity Framework Migration

--- a/Dot-Net-EF-MySqlDb/Dot-Net-EF-MySqlDb.API/appsettings.json
+++ b/Dot-Net-EF-MySqlDb/Dot-Net-EF-MySqlDb.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MysqlDbConnectionString": "Server=localhost;Database=nzwalkdb;user=root;password=root;port=3306;"
+  }
 }
