--- a/.gitignore
+++ b/.gitignore
@@ -192,19 +192,19 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
-# NuGet Packages
-*.nupkg
+# # NuGet Packages
+# *.nupkg
 # NuGet Symbol Packages
-*.snupkg
-# The packages folder can be ignored because of Package Restore
-**/[Pp]ackages/*
-# except build/, which is used as an MSBuild target.
-!**/[Pp]ackages/build/
-# Uncomment if necessary however generally it will be regenerated when needed
-#!**/[Pp]ackages/repositories.config
-# NuGet v3's project.json files produces more ignorable files
-*.nuget.props
-*.nuget.targets
+# *.snupkg
+# # The packages folder can be ignored because of Package Restore
+# **/[Pp]ackages/*
+# # except build/, which is used as an MSBuild target.
+# !**/[Pp]ackages/build/
+# # Uncomment if necessary however generally it will be regenerated when needed
+# #!**/[Pp]ackages/repositories.config
+# # NuGet v3's project.json files produces more ignorable files
+# *.nuget.props
+# *.nuget.targets
 
 # Microsoft Azure Build Output
 csx/
@@ -215,13 +215,13 @@ ecf/
 rcf/
 
 # Windows Store app package directories and files
-AppPackages/
-BundleArtifacts/
-Package.StoreAssociation.xml
-_pkginfo.txt
-*.appx
-*.appxbundle
-*.appxupload
+# AppPackages/
+# BundleArtifacts/
+# Package.StoreAssociation.xml
+# _pkginfo.txt
+# *.appx
+# *.appxbundle
+# *.appxupload
 
 # Visual Studio cache files
 # files ending in .cache can be ignored
